src/objects/Case.object
<CustomObject>
    <fields>
        <fullName>Titolo_Cliente_input__c</fullName>
        <label>Titolo Cliente (input)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tracking_Number__c</fullName>
        <label>Tracking Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>URL_Foto__c</fullName>
        <label>URL Foto</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>URL_Pagina_Sito__c</fullName>
        <label>URL Pagina Sito</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Ubicazione__c</fullName>
        <label>Ubicazione</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Stock</fullName>
                </value>
                <value>
                    <fullName>NEG1</fullName>
                </value>
                <value>
                    <fullName>Boutique DOS</fullName>
                </value>
                <value>
                    <fullName>Ordine di produzione</fullName>
                </value>
                <value>
                    <fullName>Prodotto non trovato</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Vendita_Conclusa__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Vendita Conclusa</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Via_Cliente__c</fullName>
        <formula>Account.PersonMailingStreet</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Via Cliente</label>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>All_Open_Cases_CN</fullName>
        <booleanFilter>(1 OR 2 OR 3) AND 4</booleanFilter>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>Titolare_Caso_c__c</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.ORIGIN</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Nazione_input__c</field>
            <operation>equals</operation>
            <value>CN</value>
        </filters>
        <filters>
            <field>Nazione__c</field>
            <operation>equals</operation>
            <value>CN</value>
        </filters>
        <filters>
            <field>OWNER_NAME</field>
            <operation>contains</operation>
            <value>Min</value>
        </filters>
        <filters>
            <field>CASES.STATUS</field>
            <operation>notEqual</operation>
            <value>Chiuso</value>
        </filters>
        <label>All Open Cases CN</label>
        <sharedTo>
            <group>Customer_Care_CN</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Buying</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
        <columns>Linea__c</columns>
        <columns>SKU__c</columns>
        <columns>Stagione_Prodotto__c</columns>
        <columns>Modello_Prodotto__c</columns>
        <columns>Colore_Prodotto__c</columns>
        <columns>Taglia_Prodotto__c</columns>
        <filterScope>Queue</filterScope>
        <label>Buying</label>
        <queue>Buying</queue>
        <sharedTo>
            <group>Buying_Ecommerce</group>
            <group>Customer_Care_IT</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Cases_to_be_assigned</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>Nazione__c</columns>
        <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
        <columns>OWNER_NAME</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>NAME</columns>
        <columns>Entry_Point__c</columns>
        <columns>Area__c</columns>
        <columns>Canale__c</columns>
        <columns>Categoria__c</columns>
        <columns>Sottocategoria__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.RECORDTYPE</field>
            <operation>notEqual</operation>
            <value>Case.Ticket_E_commerce_Notify_Me</value>
        </filters>
        <filters>
            <field>Titolare_Caso_c__c</field>
            <operation>contains</operation>
            <value>livello,email,queue,coda</value>
        </filters>
        <filters>
            <field>CASES.STATUS</field>
            <operation>equals</operation>
            <value>Nuovo,Riassegnato,In attesa,Risposta ricevuta</value>
        </filters>
        <label>Cases to be assigned</label>
        <sharedTo>
            <group>Customer_Care_IT</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Casi_in_attesa</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>OWNER_NAME</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>NAME</columns>
        <columns>Nazione__c</columns>
        <columns>Entry_Point__c</columns>
        <columns>Area__c</columns>
        <columns>Canale__c</columns>
        <columns>Categoria__c</columns>
        <columns>Sottocategoria__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>CASES.STATUS</field>
            <operation>equals</operation>
            <value>In attesa</value>
        </filters>
        <label>02) Casi in attesa</label>
        <language>it</language>
        <sharedTo>
            <role>X1_Livello</role>
            <roleAndSubordinatesInternal>X2_Livello_Commerciale_Monomarca</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>X2_Livello_Commerciale_Multimarca</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>X2_Livello_Gestione_VIP</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Coda_CN_Case</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Queue</filterScope>
        <label>CN Queue</label>
        <queue>Coda_CN</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Coda_DE_Case</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Queue</filterScope>
        <label>DE Queue</label>
        <queue>Coda_DE</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Coda_EN_Case</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Queue</filterScope>
        <label>EN Queue</label>
        <queue>Coda_EN</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Coda_ES_Case</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Queue</filterScope>
        <label>ES  Queue</label>
        <queue>Coda_ES</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Coda_Email_Case</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Queue</filterScope>
        <filters>
            <field>CASES.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Case.Customer_Care</value>
        </filters>
        <label>Email Queue</label>
        <queue>Coda_Email</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Coda_Email_US</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Queue</filterScope>
        <filters>
            <field>CASES.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Case.Customer_Care_US</value>
        </filters>
        <label>Email US Queue</label>
        <queue>Coda_Email</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Coda_FR_Case</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Queue</filterScope>
        <label>FR Queue</label>
        <queue>Coda_FR</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Coda_IT_Case</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Queue</filterScope>
        <label>IT Queue</label>
        <queue>Coda_IT</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Coda_JP_Case</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Queue</filterScope>
        <label>JP Queue</label>
        <queue>Coda_JP</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Coda_RU_Case</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Queue</filterScope>
        <label>RU Queue</label>
        <queue>Coda_RU</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Coda_USA_Case</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Queue</filterScope>
        <label>USA Queue</label>
        <queue>Coda_USA</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <recordTypes>
        <fullName>Brand_Specialist</fullName>
        <active>true</active>
        <businessProcess>Ticket E-commerce</businessProcess>
        <description>Brand Specialist</description>
        <label>Brand Specialist</label>
    </recordTypes>
    <recordTypes>
        <fullName>Customer_Care</fullName>
        <active>true</active>
        <businessProcess>Customer Care</businessProcess>
        <description>Customer Care</description>
        <label>Customer Care</label>
    </recordTypes>
    <recordTypes>
        <fullName>Customer_Care_Closed</fullName>
        <active>true</active>
        <businessProcess>Customer Care</businessProcess>
        <description>Customer Care - Closed</description>
        <label>Customer Care - Closed</label>
    </recordTypes>
    <recordTypes>
        <fullName>Customer_Care_US</fullName>
        <active>true</active>
        <businessProcess>Customer Care</businessProcess>
        <description>Customer Care US</description>
        <label>Customer Care US</label>
    </recordTypes>
    <recordTypes>
        <fullName>Customer_Care_US_Closed</fullName>
        <active>true</active>
        <businessProcess>Customer Care</businessProcess>
        <description>Customer Care US - Closed</description>
        <label>Customer Care US - Closed</label>
    </recordTypes>
    <recordTypes>
        <fullName>Customer_Care_WTC</fullName>
        <active>true</active>
        <businessProcess>Customer Care</businessProcess>
        <label>Customer Care WTC</label>
    </recordTypes>
    <recordTypes>
        <fullName>Reso_Cambio</fullName>
        <active>true</active>
        <businessProcess>Ticket E-commerce</businessProcess>
        <description>Reso/Cambio</description>
        <label>Reso/Cambio</label>
    </recordTypes>
    <recordTypes>
        <fullName>Reso_Cambio_in_Store</fullName>
        <active>true</active>
        <businessProcess>Ticket E-commerce</businessProcess>
        <description>Reso/Cambio in Store</description>
        <label>Reso/Cambio in Store</label>
    </recordTypes>
    <recordTypes>
        <fullName>Riparazione</fullName>
        <active>false</active>
        <businessProcess>Riparazione</businessProcess>
        <label>Riparazione</label>
    </recordTypes>
    <recordTypes>
        <fullName>Ticket_E_commerce</fullName>
        <active>true</active>
        <businessProcess>Ticket E-commerce</businessProcess>
        <description>Ticket E-commerce</description>
        <label>Ticket E-commerce</label>
    </recordTypes>
    <recordTypes>
        <fullName>Ticket_E_commerce_Notify_Me</fullName>
        <active>true</active>
        <businessProcess>Notify Me</businessProcess>
        <label>Ticket E-commerce – Notify Me</label>
    </recordTypes>
    <recordTypes>
        <fullName>Ticket_OMS</fullName>
        <active>true</active>
        <businessProcess>Ticket E-commerce</businessProcess>
        <description>Ticket OMS</description>
        <label>Ticket OMS</label>
    </recordTypes>
    <sharingModel>Read</sharingModel>
    <validationRules>
        <fullName>Customer_Satisfaction_required</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
ISBLANK(TEXT(Customer_Sat__c)),
AND(ISPICKVAL(Status, &quot;Chiuso&quot;),
ISCHANGED(Status)),
NOT(ISPICKVAL(Categoria__c, &quot;Spam&quot;))
)</errorConditionFormula>
        <errorMessage>Inserire Customer Satisfation prima di chiudere il caso</errorMessage>
    </validationRules>
</CustomObject>